--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -1,1 +1,13 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Tic Tac Toe - 2PlayerGames</title>
+  <link rel="stylesheet" type="text/css" href="Styles.css">
+</head>
+<body>
+	<canvas id="canvas" height="800" width="1000">Your browser doesn't support my high-tech programming, sorry :/</canvas>
+  <script type="text/javascript" src="Scripts.js"></script>
+  <p id="link"></p>
+</body>
+</html>
 
