--- a/TicTacToe.html
+++ b/TicTacToe.html
@@ -9,7 +9,7 @@
   <div class="header">
     <h1>Tic Tac Toe</h1>
     <p>Rules are simple: click somewhere below where you want to make your mark. Then a link will pop up below - send it to the person you are playing against. Have fun!</p>
-    <p id="link"></p>
+    <p id="link">&nbsp;</p>
  </div>
 	<canvas id="canvas" height="800" width="1000">Your browser doesn't support my high-tech programming, sorry :/</canvas>
   <script type="text/javascript" src="Scripts.js"></script>
